# yr3mod3

./: CMakeLists.txt  README.md
DemonRenderer/doc/html/: _u_b_omanager_8cpp_source.html  _u_b_omanager_8hpp_source.html  application_8cpp_source.html  class_actor-members.html  class_actor.html  class_cube_map-members.html  class_cube_map.html  class_managed_texture-members.html  class_managed_texture.html  class_scriptable-members.html  class_scriptable.html  class_texture-members.html  class_texture.html  class_u_b_o_manager.html  cube_map_8cpp_source.html  functions_c.html  functions_func_c.html  functions_m.html  functions_vars_m.html  log_8cpp.html  log_8cpp_source.html  log_8hpp.html  log_8hpp_source.html  managed_texture_8cpp_source.html  managed_texture_8hpp_source.html  scriptable_8hpp_source.html  texture_8cpp_source.html  texture_8hpp_source.html  window_8hpp_source.html
DemonRenderer/include/: DemonRenderer.hpp
DemonRenderer/include/assets/: cubeMap.hpp  managedTexture.hpp  shader.hpp  texture.hpp  textureUnitManager.hpp
DemonRenderer/include/buffers/: FBO.hpp  FBOlayout.hpp  SSBO.hpp  UBOlayout.hpp  UBOmanager.hpp
DemonRenderer/include/core/: application.hpp  layer.hpp  log.hpp
DemonRenderer/include/gameObjects/: scriptable.hpp
DemonRenderer/include/rendering/: computePass.hpp  depthOnlyPass.hpp  material.hpp  renderPass.hpp  renderer.hpp  uniformDataTypes.hpp
DemonRenderer/include/windows/: window.hpp
DemonRenderer/src/assets/: cubeMap.cpp  managedTexture.cpp  mesh.cpp  shader.cpp  texture.cpp
DemonRenderer/src/buffers/: FBO.cpp  IBO.cpp  RBO.cpp  UBOlayout.cpp  UBOmanager.cpp  VAO.cpp  VBO.cpp
DemonRenderer/src/core/: application.cpp  log.cpp  physics.cpp  randomiser.cpp
DemonRenderer/src/rendering/: depthOnlyPass.cpp  material.cpp  renderPass.cpp  renderer.cpp
DemonRenderer/src/windows/: GLFW_GL_GC.cpp
application/include/: GAMR3531.hpp  app.hpp  ui.hpp
application/include/ImGui/: bloomPanel.hpp
application/scripts/include/: camera.hpp  controller.hpp
application/scripts/src/: camera.cpp  controller.cpp  rotation.cpp
application/src/: GAMR3531.cpp  app.cpp  ui.cpp
application/src/ImGui/: bloomPanel.cpp
assets/shaders/Bloom/: DownBlurFrag.glsl  ThresholdFrag.glsl  UpFilterFrag.glsl
assets/shaders/Common/: Lights_common.glsl
assets/shaders/Composition/: Frag.glsl
assets/shaders/PBR/: pbrFrag.glsl  pbrFragEmissive.glsl  pbrVertex.glsl
assets/shaders/Phong/: EmissiveFrag.glsl  Frag.glsl
assets/shaders/Skybox/: Frag.glsl  Vert.glsl
